Updated git status

--- a/iTunesSearch/iTunesSearch/Localization/en.lproj/Localizable.strings
+++ b/iTunesSearch/iTunesSearch/Localization/en.lproj/Localizable.strings
@@ -7,3 +7,9 @@
 */
 
 "Download 1 Track" = "Download 1 Track";
+"Collection name:" = "Collection name:";
+"Collection Price:" = "Collection Price:";
+"Track Price:" = "Track Price:";
+"Release Date:" = "Release Date:";
+"Genre:" = "Genre:";
+"Country:" = "Country:";
