--- a/iTunesSearch/iTunesSearch/Localization/uk.lproj/Localizable.strings
+++ b/iTunesSearch/iTunesSearch/Localization/uk.lproj/Localizable.strings
@@ -7,3 +7,9 @@
 */
 
 "Download 1 Track" = "Завантажити 1 Трек";
+"Collection name:" = "Імʼя колекції:";
+"Collection price:" = "Ціна  колекції:";
+"Track price:" = "Віртість треку:";
+"Release date:" = "Дата випуску:";
+"Genre:" = "Жанр:";
+"Country:" = "Країна:";
