--- a/iTunesSearch/iTunesSearch/Localization/uk.lproj/Localizable.strings
+++ b/iTunesSearch/iTunesSearch/Localization/uk.lproj/Localizable.strings
@@ -13,3 +13,12 @@
 "Release date:" = "Дата випуску:";
 "Genre:" = "Жанр:";
 "Country:" = "Країна:";
+
+"Error" = "Помилка";
+"OK" = "Гаразд";
+"Server error while downloading image" = "Помилка сервера підчас завантаження картинки";
+"Download was successful but data corrupted" = "Завантаження пройшло успішно, але дані пошкоджено";
+"Wrong Entity name 😱" = "Невірне ім'я таблиці 😱";
+"Server error element a nil" = "Помилка серверу елемент nil";
+"Service Error:" = "Помика сервісу:";
+"Unknown Error" = "Невідома помилка";
