Created player button state depent of state of player, fixed isPlaying false state in AudioClient

--- a/iTunesSearch/iTunesSearch/Localization/en.lproj/Localizable.strings
+++ b/iTunesSearch/iTunesSearch/Localization/en.lproj/Localizable.strings
@@ -14,6 +14,7 @@
 "Genre:" = "Genre:";
 "Country:" = "Country:";
 "Play Demo" = "Play Demo";
+"Pause" = "Pause";
 
 "Error" = "Error";
 "OK" = "OK";
