--- a/iTunesSearch/iTunesSearch/Localization/uk.lproj/Localizable.strings
+++ b/iTunesSearch/iTunesSearch/Localization/uk.lproj/Localizable.strings
@@ -14,6 +14,7 @@
 "Genre:" = "Жанр:";
 "Country:" = "Країна:";
 "Play Demo" = "Превʼю";
+"Pause" = "Пауза";
 
 "Error" = "Помилка";
 "OK" = "Гаразд";
