Naming and common lexic refactoring

--- a/iTunesSearch/iTunesSearch/Localization/en.lproj/Localizable.strings
+++ b/iTunesSearch/iTunesSearch/Localization/en.lproj/Localizable.strings
@@ -20,8 +20,8 @@
 "OK" = "OK";
 "Server error while downloading image" = "Server error while downloading image";
 "Download was successful but data corrupted" = "Download was successful but data corrupted";
-"Wrong Entity name 😱" = "Wrong Entity name 😱";
-"Server error element a nil" = "Server error element a nil";
+"Can't save data to data base" = "Can't save data to data base";
+"Element a nil" = "Element a nil";
 "Service Error:" = "Service Error:";
 "Unknown Error" = "Unknown Error";
 
