--- a/iTunesSearch/iTunesSearch/Localization/uk.lproj/Localizable.strings
+++ b/iTunesSearch/iTunesSearch/Localization/uk.lproj/Localizable.strings
@@ -20,8 +20,8 @@
 "OK" = "Гаразд";
 "Server error while downloading image" = "Помилка сервера підчас завантаження картинки";
 "Download was successful but data corrupted" = "Завантаження пройшло успішно, але дані пошкоджено";
-"Wrong Entity name 😱" = "Невірне ім'я таблиці 😱";
-"Server error element a nil" = "Помилка серверу елемент nil";
+"Can't save data to data base" = "Не можемо зберегти дані до бази данної";
+"Element a nil" = "Елемент nil";
 "Service Error:" = "Помика сервісу:";
 "Unknown Error" = "Невідома помилка";
 
