--- a/iTunesSearch/iTunesSearch/Localization/uk.lproj/Localizable.strings
+++ b/iTunesSearch/iTunesSearch/Localization/uk.lproj/Localizable.strings
@@ -6,24 +6,28 @@
   
 */
 
-"Download 1 Track" = "Завантажити 1 Трек";
-"Collection name:" = "Імʼя колекції:";
-"Collection price:" = "Ціна  колекції:";
-"Track price:" = "Віртість треку:";
-"Release date:" = "Дата випуску:";
-"Genre:" = "Жанр:";
-"Country:" = "Країна:";
-"Play Demo" = "Превʼю";
-"Pause" = "Пауза";
+// Track and Track detail screens text
+Download-Track = "Завантажити 1 Трек";
+Collection-name = "Імʼя колекції:";
+Collection-price = "Ціна колекції:";
+Track-price = "Віртість треку:";
+Release-date = "Дата випуску:";
+Genre = "Жанр:";
+Country = "Країна:";
+Play-demo = "Превʼю";
+Pause = "Пауза";
 
-"Error" = "Помилка";
-"OK" = "Гаразд";
-"Server error while downloading image" = "Помилка сервера підчас завантаження картинки";
-"Download was successful but data corrupted" = "Завантаження пройшло успішно, але дані пошкоджено";
-"Can't save data to data base" = "Не можемо зберегти дані до бази данної";
-"Element a nil" = "Елемент nil";
-"Service Error:" = "Помика сервісу:";
-"Unknown Error" = "Невідома помилка";
+// Errors
+Error = "Помилка";
+OK = "Гаразд";
+Server-error-while-downloading-image = "Помилка сервера підчас завантаження картинки";
+Download-was-successful-but-data-corrupted = "Завантаження пройшло успішно, але дані пошкоджено";
+Cant-save-data-to-data-base = "Не можемо зберегти дані до бази данної";
+Element-a-nil = "Елемент nil";
+Service-error = "Помика сервісу:";
+Unknown-error = "Невідома помилка";
+Data-not-found = "Data not found";
 
-"Demo URL unavailable" = "URL Превʼю треку недоступне";
-"Demo URL corrupted" = "URL Превʼю треку пошкоджене";
+// Alert text
+Demo-URL-unavailable = "URL Превʼю треку недоступне";
+Demo-URL-corrupted = "URL Превʼю треку пошкоджене";
