--- a/iTunesSearch/iTunesSearch/Localization/uk.lproj/Localizable.strings
+++ b/iTunesSearch/iTunesSearch/Localization/uk.lproj/Localizable.strings
@@ -31,3 +31,6 @@ Data-not-found = "Data not found";
 // Alert text
 Demo-URL-unavailable = "URL Превʼю треку недоступне";
 Demo-URL-corrupted = "URL Превʼю треку пошкоджене";
+
+// Argument testing
+greeting = "Привіт, %@ - %@!";
