Added clips button to detail screen

--- a/iTunesSearch/iTunesSearch/Localization/en.lproj/Localizable.strings
+++ b/iTunesSearch/iTunesSearch/Localization/en.lproj/Localizable.strings
@@ -16,6 +16,7 @@ Genre = "Genre:";
 Country = "Country:";
 Play-demo = "Play Demo";
 Pause = "Pause";
+Clips = "Clips";
 
 // Errors
 Error = "Error";
