Created Media Content Coordinator with separate router for controllering self flow of screens

--- a/iTunesSearch/iTunesSearch/Localization/en.lproj/Localizable.strings
+++ b/iTunesSearch/iTunesSearch/Localization/en.lproj/Localizable.strings
@@ -28,6 +28,12 @@ Demo-URL-corrupted = "Demo URL corrupted";
 // Argument testing
 greeting = "Hi, %@ - %@!";
 
+// Media Content Screen
+Media-Content-Screen-Title = "Clips";
+
+// Common
+Back = "Back";
+
 //MARK: Presentaion Layer
 //MARK: Domain Layer
 Element-a-nil = "Data nil";
